--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,6 +1,6 @@
 <div class="input-group mb-3">
   <input [(ngModel)]="value" type="text" class="form-control" placeholder="Input Field {{index + 1}}" />
   <div class="input-group-append">
-    <button class="btn btn-danger" (click)="remove.emit()">Remove</button>
+    <button class="btn btn-primary" (click)="submit.emit()">Submit</button>
   </div>
 </div>
