--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,28 @@
-<h1>Dynamic Input Fields</h1>
-
-<button class="btn btn-primary" (click)="addInput()">Add Input</button>
-
-<div class="input-container mt-3">
-  <app-input *ngFor="let input of inputs; let i=index" [(value)]="inputs[i]"></app-input>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Input:</h3>
+      <div class="d-flex flex-column mb-3">
+        <app-input *ngFor="let input of inputs; index as i" [(value)]="inputs[i]"></app-input>
+      </div>
+      <button class="btn btn-primary" (click)="addInput()">+</button>
+    </div>
+    <div class="col-md-6">
+      <h3>Output:</h3>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Input</th>
+            <th>Output</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let input of inputs; index as i">
+            <td>{{ input }}</td>
+            <td>{{ inputs[i] }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
